--- a/Lab4-Collections/pom.xml
+++ b/Lab4-Collections/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>edu.mum.cs544</groupId>
-  <artifactId>W1D4-Hibernate-2</artifactId>
+  <artifactId>Lab4-Collections</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
